# dbfold2

./: .gitignore  LICENSE  README.md  environment.yml  packages.yml  setup.py
MCPU/config_files/: amino_torsion.data
MCPU/mcpu_prep/: save_triple.c  test_triple
MCPU/old/: Makefile_cpp  globals_old.c
MCPU/sim/: Starting_files_from_previous_simulation.sh  Starting_files_from_previous_simulation_nous.sh
MCPU/src_cpp/: CMakeLists.txt  build_errors.txt  change_config_files_format.ipynb  cpp_log.txt  log.txt
MCPU/src_cpp/apps/: main.cpp
MCPU/src_cpp/config_files/: amino_torsion.json  center20_state.csv  center30_state.csv
MCPU/src_cpp/examples/: 1uao.sctorsion  cfg  cfg.json
MCPU/src_cpp/include/: CellGrid.hpp  ConfigLoader.hpp  align.h  atom.h  constraint.h  contacts.h  debug.h  define.h  energy.h  fold.h  getrms.h  globals.h  hbonds.h  in_out.h  init.h  jac_local.h  lattice_util.h  loop.h  misc_util.h  move.h  pdb_util.h  protein_util.h  rotate.h  setup.h  sturm.h  tripep_closure.h  update.h  vector.h
MCPU/src_cpp/include/Random123/: threefry.h
MCPU/src_cpp/include/Random123/features/: compilerfeatures.h  iccfeatures.h  msvcfeatures.h  sse.h
MCPU/src_cpp/include/db/: amino_acid_db.h  hbond_db.h
MCPU/src_cpp/include/xtc/: xdrfile.h  xdrfile_trr.h  xdrfile_xtc.h
MCPU/src_cpp/plan/: TripeptideClosure.cpp  TripeptideClosure.hpp  amino_acid_db.cpp
MCPU/src_cpp/src/: CellGrid.cpp  ConfigLoader.cpp  align.cpp  atom.cpp  constraint.cpp  contacts.cpp  debug.cpp  energy.cpp  fold.cpp  getrms.cpp  globals.cpp  hbonds.cpp  in_out.cpp  init.cpp  jac_local.cpp  lattice_util.cpp  loop.cpp  main.cpp  misc_util.cpp  move.cpp  pdb_util.cpp  protein_util.cpp  rotate.cpp  setup.cpp  sturm.cpp  triplet_closure.cpp  update.cpp  vector.cpp
MCPU/src_mpi_umbrella/: Makefile  align.c  atom.h  backbone.c  backbone.h  cfg_1igd  clang.txt  constraint.c  constraint.h  contacts.c  contacts.h  debug.c  debug.h  define.h  energy.c  energy.h  err.txt  fold.c  fold.h  getrms.c  getrms.h  globals.h  hbonds.c  hbonds.h  in_out.c  in_out.h  init.c  init.h  jac_local.c  lattice_util.c  lattice_util.h  log.txt  loop.c  loop.h  misc_util.c  misc_util.h  move.c  mu_potential.c  pdb_util.c  pdb_util.h  (+11 more)
MCPU/src_mpi_umbrella/Random123/: array.h
MCPU/src_mpi_umbrella/include/: align.h  constraint.h  contacts.h  define.h  energy.h  getrms.h  globals.h  hbonds.h  in_out.h  init.h  jac_local.h  lattice_util.h  loop.h  move.h  mu_potential.h  pdb_util.h  rng.h  rotate.h  sturm.h  tripep_closure.h  update.h  (+1 more)
MCPU/user_scripts/: MCPU_srun.sh  extract_minimized_structure.sh  extract_pdb.template.tcl  generate_topo.template.tcl  namd_minimization.template.conf  prep_MCPU.sh  prep_MCPU_constraint.sh  prep_SBATCH_MCPU.sh  run_MCPU-multiconf.sh  run_MCPU.sh  run_psfgen.sh  shell_template  shell_template_old  sm-extract_minimized_structure.sh  template.cfg  template_constraint.cfg
MCPU2/: .clang-format  CMakeLists.txt  CMakeUserPresets.json  Makefile  binaryContacts.csv  file_list.txt  main.c  main.cpp  main_backup.cpp  project  slurm-18155736.out  slurm-65996934.out  smogVectors.txt  trajectory.xtc
MCPU2/backup_working_version/: context_mcpu.cpp  context_mcpu.h
MCPU2/benchmark/: array_vs_vector_benchmark.cpp  benchmark  deep_nested_vs_flattened.cpp  eigen_vector_1d_vec_benchmark.cpp  hbond_lookup.cpp  pairwise_contact.cpp  pairwise_distance.cpp
MCPU2/build_gcc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  eigen_vector_benchmark  pairwise_distance_benchmark
MCPU2/build_gcc/.cmake/api/v1/reply/: cache-v2-5cf87539527007111ca2.json  cmakeFiles-v1-593089132f992e9d9957.json  codemodel-v2-ef84c59c7cde735b576a.json  index-2025-06-09T15-16-51-0725.json  target-MCPU2-Debug-fbc9dec0204ae05cde81.json  target-eigen_vector_benchmark-Debug-c43a2ce2d1e206c88534.json  target-pairwise_distance_benchmark-Debug-dd7808d8e812d16ef9c4.json  toolchains-v1-5072999347e05c975463.json
MCPU2/config_files/: amino_torsion.data  atom_radii.txt
MCPU2/config_files_new/: atom_types.csv
MCPU2/debug_concerted_rotation/: trajectory.xtc
MCPU2/include/: align.h  amino_acids.h  cell_list.h  constants.h  context.h  context_mcpu.h  geometry.h  integrator.h  load_pdb.h  logger.h  mcpu_forcefield.h  mpi_util.h  pdb_parser.h  protein_structure.h  read_config.h  reporter.h  rotamer.h  system.h  system_mcpu.h  topology.h
MCPU2/include/ff/: mcpu_aromatic.h
MCPU2/include/forces/: ForcefieldMCPU.h
MCPU2/include/moves/: base_rotation.h  concerted_rotation.h  dihedral_rotation.h
MCPU2/include/tripeptide_closure/: sturm.h  tripep_closure.h
MCPU2/include/utils/: geometry.h  geometry_utils.h  hbond.h  mcpu_hbond_utils.h  mpi_utils.h  random.h  random_utils.h  rotation_utils.h  string_utils.h
MCPU2/mcpu_prep/: save_triple  save_triple.c
MCPU2/src/: align.cpp  cell_list.cpp  context.cpp  context_mcpu.cpp  integrator.cpp  load_pdb.cpp  logger.cpp  mcpu_aromatic.cpp  mcpu_forcefield.cpp  mpi_util.cpp  mpi_utils.cpp  pdb_parser.cpp  protein_structure.cpp  read_config.cpp  reporter.cpp  system.cpp  system_mcpu.cpp  test  test.cpp  topology.cpp
MCPU2/src/moves/: concerted_rotation.cpp  dihedral_rotation.cpp
MCPU2/src/utils/: geometry.cpp  geometry_utils.cpp  hbond.cpp  mcpu_hbond_utils.cpp  rotation_utils.cpp
MCPU2/src_mpi_umbrella/: align.h  backbone.c  backbone.h  fold.h  fold_potential_mpi  lattice_util.h
MCPU2/user_scripts/: MCPU_mpiexec.sh  run_namd_min.sh  sm-run_namd_min.sh  sm-run_psfgen.sh  template.cfg  three_to_one.sed
dbfold/: protein.py  simulation.py
dbfold/mcpu/: preprocessing.py
dbfold/scripts/: compute_dbfold_landscape.py  compute_mbar.py
dbfold/simulation/: config.template  simulation.py
dbfold/utils/: postprocessing.py  subsample.py  substructures.py  utils.py
examples/abce1/: MCPU.sh  config.yaml  preprocessing.ipynb
examples/actb/: config.yaml  preprocessing.ipynb
examples/analysis/: 1D_Free_energy.ipynb  2D_Free_energy.ipynb  dbfold_landscape_analysis.ipynb
examples/chignolin/: MCPU.sh  cfg  config.yaml  phi_psi.txt
test/: config.yml  test_mcpu_forcefield.ipynb
(+47 files in other folders)
